--- a/Diamon/app/src/main/AndroidManifest.xml
+++ b/Diamon/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.Diamon">
-        <activity android:name=".Account_Setting"></activity>
+        <activity android:name=".withdrawalActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".BlpActivity" />
+        <activity
+            android:name=".TransactionsActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Account_Setting" />
         <activity
             android:name=".DepositActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SendActivity"
             android:screenOrientation="portrait" />
