--- a/Diamon/app/build.gradle
+++ b/Diamon/app/build.gradle
@@ -3,9 +3,10 @@
 
 plugins {
     id 'com.android.application'
-
 }
+
 apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -30,6 +31,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
