--- a/Diamon/app/build.gradle
+++ b/Diamon/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
