--- a/Diamon/app/src/main/AndroidManifest.xml
+++ b/Diamon/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_mone_24"
+        android:icon="@drawable/logo_dmd"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@drawable/logo_dmd"
         android:supportsRtl="true"
         android:theme="@style/Theme.Diamon">
         <activity android:name=".Vue.GraphActivity"></activity>
@@ -35,11 +35,13 @@
         <activity
             android:name=".Vue.Splash"
             android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
