--- a/Diamon/app/build.gradle
+++ b/Diamon/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
 
 }
